# pagi-xcurzens

./: .cursorrules  .env.example  .gitignore  CONFIG_BRIDGE_FINAL_AUDIT.md  Cargo.toml  DEEP_AUDIT_QUICKSTART.md  DEEP_AUDIT_README.md  FORGE_ARCHITECTURE.md  FORGE_HOT_RELOAD_GUIDE.md  FORGE_HOT_RELOAD_IMPLEMENTATION.md  HANDOVER_FINAL.md  OBSERVATION_PHASE_PROTOCOL.md  QUICK_START.md  README.md  REBRAND_COMPLETE.md  SOVEREIGN_MONOLITH_ENV_CONSOLIDATION.md  SOVEREIGN_OPERATIONS_MANUAL.md  SOVEREIGN_ORCHESTRATOR_UPGRADE.md  VISUAL_COGNITION_README.md  clear-settings.html  forge-hot-reload.ps1  forge-hot-reload.sh  forge-kill-switch.ps1  forge-kill-switch.sh  pagi-down.ps1  pagi-up.ps1  pagi-up.sh  phoenix-activate-live.ps1  phoenix-activate-live.sh  phoenix-live-sync.ps1  phoenix-live-sync.sh  phoenix-rise.ps1  phoenix-rise.sh  start-sovereign.ps1  vite-dev-log.txt
add-ons/pagi-companion-ui/: Cargo.toml
add-ons/pagi-companion-ui/src/: app.rs  lib.rs  main.rs
add-ons/pagi-control-panel/: Cargo.toml
add-ons/pagi-control-panel/src/: lib.rs  main.rs
add-ons/pagi-control-panel/src/pagi_control_panel/: bridge.rs  mod.rs
add-ons/pagi-daemon/: Cargo.toml
add-ons/pagi-daemon/src/: main.rs
add-ons/pagi-gateway/: Cargo.toml  DYNAMIC_KB_SELECTION.md  KB_ROUTER_README.md  MIMIR_CHRONOS_INTEGRATION.md  SAO_REDACTION_AND_INTELLIGENT_TITLES.md  SKILLS_REGISTRY_README.md  SOVEREIGNTY_DRILL.md
add-ons/pagi-gateway/src/: bridge_copilot_skill.rs  chronos_sqlite.rs  diagnostics.rs  governor.rs  heal.rs  knowledge_router.rs  live_dashboard.rs  main.rs  mimir.rs  openrouter_live.rs  plugin_loader.rs  voice.rs
add-ons/pagi-gateway/src/handlers/: chat.rs  mod.rs
add-ons/pagi-gateway/src/services/: mod.rs  orchestrator_service.rs
add-ons/pagi-gateway/src/skills/: mod.rs  wellness_report.rs
add-ons/pagi-offsec-ui/: Cargo.toml
add-ons/pagi-offsec-ui/src/: app.rs  lib.rs  main.rs
add-ons/pagi-personal-ui/: Cargo.toml
add-ons/pagi-personal-ui/src/: app.rs  lib.rs  main.rs
add-ons/pagi-sovereign-dashboard/: Cargo.toml  README.md
add-ons/pagi-sovereign-dashboard/src/: main.rs
add-ons/pagi-studio-ui/: Cargo.toml
add-ons/pagi-studio-ui/assets/: README.md  ui_config.json
add-ons/pagi-studio-ui/assets/studio-interface/: App.tsx  PAGI_WORKSPACE.md  README.md  index.css  index.html  mermaid.d.ts  metadata.json  package-lock.json  package.json  postcss.config.cjs  types.ts  vite.config.ts
add-ons/pagi-studio-ui/src/: app.rs  config.rs  lib.rs  main.rs  server_main.rs
config/: blueprint.json  gateway.toml  knowledge-map.toml
crates/pagi-bridge-ms/: Cargo.toml
crates/pagi-bridge-ms/examples/: test_focus.rs
crates/pagi-bridge-ms/src/: copilot_seeker.rs  input_simulator.rs  lib.rs  orchestrator.rs  output_scraper.rs
crates/pagi-core/: Cargo.toml
crates/pagi-core/src/: config.rs  env_sync.rs  hot_reload.rs  lib.rs  memory.rs  openrouter_service.rs  project_vault.rs  qdrant_sidecar.rs  secure_memory.rs  shadow_store.rs  shared.rs  skills.rs  social_intelligence.rs  updater.rs
crates/pagi-core/src/knowledge/: bootstrap.rs  entities.rs  kb1.rs  kb2.rs  kb3.rs  kb4.rs  kb5.rs  kb6.rs  kb7.rs  kb8.rs  kb_router.rs  lancedb_layer.rs  mod.rs  store.rs  traits.rs  vault.rs  vector_store.rs
crates/pagi-core/src/orchestrator/: archetype_logic.rs  astro_weather.rs  blueprint.rs  control.rs  health_report.rs  heuristics.rs  init.rs  maintenance.rs  mod.rs  persona.rs  planner.rs  protocols.rs  skills.rs  sovereign_voice.rs  traits.rs
crates/pagi-core/src/prompts/: mimir_minutes.rs  mimir_title.rs  mod.rs
crates/pagi-core/src/security/: mod.rs  redaction.rs
crates/pagi-core/tests/: ethos_framework_test.rs  kardia_map_test.rs  multi_agent_sim.rs  oikos_integration_audit.rs  shadow_vault_test.rs  task_governance_test.rs  topic_indexer_test.rs
crates/pagi-evolution/: Cargo.toml
crates/pagi-evolution/src/: compiler.rs  lib.rs  loader.rs  operator.rs  red_team.rs  rollback.rs  skill.rs
crates/pagi-federation/: Cargo.toml  README.md  build.rs
crates/pagi-federation/proto/: phoenix.proto
crates/pagi-federation/src/: federation.rs  lib.rs  mtls.rs
crates/pagi-mimir/: Cargo.toml  README.md
crates/pagi-mimir/src/: audio.rs  lib.rs  main.rs  preflight.rs  storage.rs  transcript.rs  whisper_worker.rs
crates/pagi-skills/: Cargo.toml  manifest.schema.json
crates/pagi-skills/core/: manifest.json
crates/pagi-skills/ephemeral/: manifest.json
crates/pagi-skills/import/: manifest.json
crates/pagi-skills/src/: absurdity_tracker.rs  analyze_sentiment.rs  biogate_sync.rs  check_alignment.rs  community_pulse.rs  community_scraper.rs  daily_checkin.rs  deep_audit.rs  deep_journal.rs  draft_response.rs  ethos_sync.rs  evening_audit.rs  evolution_inference.rs  forge.rs  forge_gen_weather_sentinel.rs  fs_tools.rs  get_agent_messages.rs  identity_setup.rs  journal_skill.rs  kardia_map.rs  knowledge_insert.rs  knowledge_pruner.rs  knowledge_query.rs  knowledge_synthesis.rs  lead_capture.rs  lib.rs  message_agent.rs  mimir_skills.rs  mission_validator.rs  model_router.rs  ms_graph.rs  oikos_task_governor.rs  pattern_match_v2.rs  recall_past_actions.rs  red_team_skill.rs  reflect_shadow.rs  research_audit.rs  research_semantic.rs  rig_tools.rs  rollback_skill.rs  (+13 more)
crates/pagi-skills/src/sentinel/: README.md  counselor.rs  file_sentinel.rs  history_harvester.rs  input_velocity.rs  mod.rs  physical_guard.rs
crates/pagi-skills/tests/: forge_weather_sentinel_test.rs  sentinel_integration_test.rs
crates/pagi-voice/: Cargo.toml  README.md
crates/pagi-voice/examples/: sovereign_voice_demo.rs  voice_test.rs
crates/pagi-voice/src/: audio.rs  ear.rs  error.rs  lib.rs  orchestrator.rs  sovereign_voice.rs  stt.rs  turn.rs  vad.rs  voice_output.rs
crates/pagi-voice/tests/: integration_test.rs
crates/pagi-xcurzens-core/: Cargo.toml
crates/pagi-xcurzens-core/src/: identity_orchestrator.rs  lead_dispatcher.rs  lib.rs  nexus_bridge.rs  relations.rs
crates/pagi-xcurzens-gateway/: Cargo.toml
crates/pagi-xcurzens-gateway/src/: main.rs
crates/pagi-xcurzens-gateway/static/: command.html
(+157 files in other folders)
