[workspace]
resolver = "2"
members = [
    "crates/pagi-core",
    "crates/pagi-bridge-ms",
    "crates/pagi-federation",
    "crates/pagi-mimir",
    "crates/pagi-evolution",
    "crates/pagi-skills",
    "crates/pagi-voice",
    "add-ons/pagi-gateway",
    "add-ons/pagi-daemon",
    "add-ons/pagi-studio-ui",
    "add-ons/pagi-companion-ui",
    "add-ons/pagi-offsec-ui",
    "add-ons/pagi-personal-ui",
    "add-ons/pagi-control-panel",
    "add-ons/pagi-sovereign-dashboard",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = { version = "0.14", default-features = false, features = ["toml"] }
axum = "0.7"
sled = "0.34"
tracing = "0.1"
dashmap = "6"
aes-gcm = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "stream"] }
scraper = "0.18"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
# Sovereign Operator dependencies
rig-core = "0.5"
sysinfo = "0.30"
walkdir = "2.5"
libloading = "0.8"
