[package]
name = "pagi-control-panel"
version = "0.1.0"
edition = "2021"
description = "Bare-metal egui Control Panel for the PAGI Master Orchestrator — KB toggles, skills, memory weights."

[[bin]]
name = "pagi-control-panel"
path = "src/main.rs"

[dependencies]
pagi-core = { path = "../../crates/pagi-core" }
egui = { version = "0.29", default-features = false }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
tokio = { version = "1", features = ["sync", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
