[package]
name = "pagi-personal-ui"
version = "0.1.0"
edition = "2021"
description = "Personal UI add-on: Egui lightweight dashboard, system tray, minimal resource usage"

[[bin]]
name = "pagi-personal-ui"
path = "src/main.rs"

[dependencies]
pagi-core = { path = "../../crates/pagi-core" }
pagi-skills = { path = "../../crates/pagi-skills" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
