[package]
name = "pagi-studio-ui"
version = "0.1.0"
edition = "2021"
description = "Developer's Cockpit — Standard Reference Frontend (Google AI Studio style). Primary add-on."

[[bin]]
name = "pagi-studio-ui"
path = "src/main.rs"

[[bin]]
name = "pagi-studio-ui-server"
path = "src/server_main.rs"

[dependencies]
pagi-core = { path = "../../crates/pagi-core" }
pagi-skills = { path = "../../crates/pagi-skills" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
webbrowser = "0.8"
