[package]
name = "pagi-core"
version = "0.1.0"
edition = "2021"
description = "AGI core: shared types, orchestrator, memory, and 8-slot knowledge base"

[features]
default = ["validation"]
lancedb = ["dep:lancedb"]
# Use rig crate for OpenRouter completion (optional; default is reqwest-based OpenRouterBridge)
rig = ["dep:rig-core"]
# Validation benchmarks: compile patches to temp libraries, smoke-test, and compare perf
validation = ["dep:tempfile", "dep:sysinfo", "dep:libloading"]
# Vector database support for semantic search (Qdrant client + sidecar management)
vector = ["dep:qdrant-client", "dep:flate2", "dep:tar", "dep:zip", "dep:walkdir"]
# Secure credential storage (OS keychain) for Sovereign Admin
keyring = ["dep:keyring"]
# Email Intelligence Hub (lettre) for Project Email use-case
email = ["dep:lettre"]

[dependencies]
tokio = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
config = { workspace = true }
sled = { workspace = true }
dashmap = { workspace = true }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = { workspace = true }
aes-gcm = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
thiserror = "2.0"
lancedb = { version = "0.26", optional = true }
rig-core = { version = "0.29", optional = true }
qdrant-client = { version = "1.12", optional = true }
tempfile = { version = "3", optional = true }
sysinfo = { workspace = true, optional = true }
libloading = { workspace = true, optional = true }
# Qdrant sidecar dependencies
flate2 = { version = "1.0", optional = true }
tar = { version = "0.4", optional = true }
zip = { version = "0.6", optional = true }
walkdir = { workspace = true, optional = true }
keyring = { version = "3", optional = true }
lettre = { version = "0.11", optional = true }
regex = "1"
once_cell = "1.20"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Memory"] }

[dev-dependencies]
tempfile = "3"
pagi-skills = { path = "../pagi-skills" }
