[package]
name = "pagi-skills"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
scraper = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
pagi-core = { path = "../pagi-core" }
sled = { workspace = true }
# Sovereign Operator dependencies
rig-core = { workspace = true }
sysinfo = { workspace = true }
walkdir = { workspace = true }
pagi-evolution = { path = "../pagi-evolution" }
pagi-mimir = { path = "../pagi-mimir" }
chrono = { workspace = true }
urlencoding = "2.1"
# Sovereign Admin: secure credential storage (OS keychain)
keyring = "3"
# Sentinel Integration dependencies
notify = "6.1"
rusqlite = { version = "0.31", features = ["bundled"] }
enigo = "0.2"
rdev = "0.5"
# LanceDB integration (optional)
lancedb = { version = "0.26", optional = true }
arrow = { version = "52", optional = true }

[features]
default = []
lancedb = ["dep:lancedb", "dep:arrow", "pagi-core/lancedb"]

[dev-dependencies]
tempfile = "3"
