[package]
name = "pagi_xcurzens_core"
version.workspace = true
edition.workspace = true
description = "PAGI XCURZENS core library and shared types"

[dependencies]
sled = "0.34"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
